Clean up and file management

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,9 +5,10 @@ services:
     restart: unless-stopped
     volumes:
       - ./data:/app/data
-      - ./main.py:/app/main.py
-      - ./textutil.py:/app/textutil.py
-      - ./database.py:/app/database.py
+      - ./code/main.py:/app/main.py
+      - ./code/textutil.py:/app/textutil.py
+      - ./code/database.py:/app/database.py
+      - ./code/data_processing.py:/app/data_processing.py
     environment:
       - BOT_TOKEN=${BOT_TOKEN}
     env_file:
