Moved all functions and commands from main.py into handle_functions.py and handle_commands.py respectively Moved all getenv from main.py to config.py and added more environment variables File management (sorted all code into three files) Updated some packages read requirements.txt Added builder stage into Dockerfile and reduced amount of layers Modified .gitignore and .dockerignore Updated README.md

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,15 +1,28 @@
-.env
-.git
-.gitignore
-README.md
-docker-compose.yml
-Dockerfile
-__pycache__
-*.pyc
-*.pyo
-*.pyd
-.venv
-.idea
-venv
-.env.local
-data/*.tmp
+**/.venv
+**/venv
+**/env
+**/.env
+**/.env.*
+**/__pycache__/
+**/*.pyc
+**/*.pyo
+**/*.pyd
+**/.Python
+**/pip-log.txt
+**/.vscode
+**/.idea
+**/*.swp
+**/*.swo
+**/.git
+**/.gitignore
+**/README.md
+**/*.log
+**/logs/
+**/docker-compose.yaml
+**/Dockerfile*
+**/.dockerignore
+**/tmp/
+**/temp/
+**/model_workshop/
+**/safe/
+**/data/*.tmp
