--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,11 @@ safe
 .idea
 data
 __pycache__
-media
+.vscode
+media*
+wheelhouse
+core/model_workshop/*.txt
+core/model_workshop/*.joblib
+whisper
+profanity_pipeline
+image_to_text
