Unified fields names within database's tables to be more organized and added new fields Added new decorators to make command implementation more streamlined and less work-intense and implemented reflection for this purpose Made messages.py to accommodate all text messages Implemented multithreading for speech_to_text, resolving blocking bot actions with voice analysing and resolved blocking issue for "/сурсе" Added and registered shutdowns within atexit and also added graceful_exit as a fallback for forceful shutdown Tweaked parameters within model_training.py Removed wheelhouse and changed to cache mounting within Docker Added stop_grace_period and init to docker-compose.yaml Changed builder and main Docker image to python:3.13-slim Made some changes within code as to adding new commands, tweaking and upgrading old commands

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,8 @@ services:
     build: .
     container_name: telegram-bot
     restart: unless-stopped
+    stop_grace_period: 30s
+    init: true
     volumes:
       - .:/app
     env_file:
