Added files in .dockerignore as safety precaution Removed deleted files in .gitignore Added application_config and changed import from set_up_job_queue to job_queue in __init__.py from IO Made BlockingApplication to move update filtering and letter analyzing into process_update in application_config.py Added SERVER_TZ to config.py Restructured database tables to be more scalable, made construct_table to automize table constuction in __init__ and add_new_chat functions, removed, rewrote and added new functions to accomodate new database structure in database.py Reduced stop_grace_period in docker-compose.yaml Added rm -rf in attempt to optimize image size in Dockerfile Restructured commands in response to database restructuring, added new functions and rewrote some functions as one in handle_commands.py Split reply_to into act_on_letter and act_on_text to make code more modular, added handlers for edited messages and made some changes to accommodate database restructuring in handle_functions.py Added new jobs and moved some code around in handle_jobs.py Removed some code as a part of a cleanup, made some custom filters and transformer function in handler_utils.py Made some changes in main.py Added some messages in messages.py Made small changes in README.md
UPD: quick patch, shifted from custom application (BlockingApplication) to preprocessing with handlers

--- a/.dockerignore
+++ b/.dockerignore
@@ -26,3 +26,13 @@
 **/model_workshop/
 **/safe/
 **/data/*.tmp
+.env
+safe
+.venv
+.idea
+__pycache__
+.vscode
+.git
+.gitignore
+README.md
+model_workshop
